dnl Process this file with autoconf to produce a configure script.
AC_INIT(context.cc)
AM_INIT_AUTOMAKE(libvm68k, 1.0.1)
AM_CONFIG_HEADER(config.h)
AC_DEFINE(_GNU_SOURCE,, [Define for GNU extensions. ])
dnl AC_DEFINE(_REENTRANT)
AC_PROG_CC
AC_PROG_CXX
AM_PROG_LIBTOOL
AC_ISC_POSIX
dnl AC_SEARCH_LIBS(pthread_create, pthread)
AC_ARG_WITH(nana,
[  --with-nana             use GNU Nana for testing [no]],, with_nana=no)
if test "$with_nana" != no; then
  AC_CHECK_LIB(nana, _I_default_handler)
  AC_CHECK_HEADERS(nana.h)
fi

AC_TYPE_SIZE_T
HS_CPLUSPLUS_EXCEPTIONS
if test "$hs_cv_cplusplus_exceptions" = no; then
  AC_MSG_WARN([exceptions not supported in C++;])
  AC_MSG_WARN([this package cannot be built without exceptions])
fi

AC_OUTPUT(Makefile vm68k/Makefile)
